[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4"


[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"